fix: Another small fix for invisible recaptcha badge

--- a/src/components/google-recaptcha/google-recaptcha.scss
+++ b/src/components/google-recaptcha/google-recaptcha.scss
@@ -31,6 +31,7 @@ $google-recaptcha_newsletter-link-decoration-hover: underline !default;
                 visibility: hidden;
                 height: 0 !important;
                 width: 0 !important;
+                overflow: hidden;
             }
         }
     }
